--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ IOS/GearsGameCenter/GearsGameCenter.xcworkspace/xcuserdata/peterrau.xcuserdatad/
 
 IOS/GearsGameCenter/GearsGameCenter.xcworkspace/xcuserdata/Jian.xcuserdatad/UserInterfaceState.xcuserstate
 
+
+IOS/GearsGameCenter/GearsGameCenter.xcworkspace/xcuserdata/peterrau.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
