communication api added

--- a/IOS/GearsGameCenter/Podfile
+++ b/IOS/GearsGameCenter/Podfile
@@ -1,5 +1,6 @@
 #pod 'BLWebSocketsServer', '~> 0.1.0'
 pod 'GCDWebServer', '~> 1.2.2'
-pod 'BLWebSocketsServer', :git => 'https://github.com/Jian130/BLWebSocketsServer' 
+#pod 'BLWebSocketsServer', :git => 'https://github.com/Jian130/BLWebSocketsServer' 
+pod 'BLWebSocketsServer'
 #pod 'JSONKit', '~> 1.5pre'
 pod 'JSONModel'
