--- a/IOS/GearsGameCenterTest/GearsGameCenter/GearsGameCenterTest-Info.plist
+++ b/IOS/GearsGameCenterTest/GearsGameCenter/GearsGameCenterTest-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Gears GC</string>
+	<string>Gears GC Test</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
